--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F9F0F7"
-    android:padding="16dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -18,6 +17,7 @@
         android:textSize="27sp"
         android:textStyle="bold"
         android:textColor="#4A4A4A"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -26,9 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="08 Januari 2025"
-        android:textSize="16sp"
-        android:textColor="#9E9E9E"
-        app:layout_constraintStart_toEndOf="@+id/tvGreeting"
+        android:textSize="18sp"
+        android:layout_marginStart="260dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvGreeting"/>
 
     <androidx.cardview.widget.CardView
@@ -36,6 +36,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/tvTanggal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +50,15 @@
             android:orientation="vertical"
             android:padding="25dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/tvEstimasi"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Estimasi Hari Ini"
                 android:textSize="18sp"
@@ -57,19 +66,19 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rp. 40.000,-"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:textColor="#FF5722"
-                android:layout_marginStart="240dp"
-                android:layout_marginTop="-24dp" />
+                android:layout_marginStart="95dp"/>
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="30dp"
                 android:weightSum="3">
 
                 <LinearLayout
@@ -120,6 +129,7 @@
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
+                        android:layout_marginStart="5dp"
                         android:src="@drawable/laporan" />
                     <TextView
                         android:layout_width="wrap_content"
@@ -141,6 +151,7 @@
         android:textSize="16sp"
         android:textColor="#4A4A4A"
         android:gravity="center"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/cardEstimation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -151,12 +162,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Jangan Kecewakan Pelanggan"
-        android:textSize="14sp"
+        android:textSize="15sp"
         android:textColor="#9E9E9E"
         android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="40dp"
         app:layout_constraintTop_toBottomOf="@id/tvMotivation"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
          />
 
     <GridLayout
