--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selamat Pagi, Tiara N"
-        android:layout_marginTop="70dp"
-        android:textSize="26sp"
+        android:layout_marginTop="30dp"
+        android:textSize="20sp"
         android:fontFamily="@font/poppinsbold"
         android:textStyle="bold"
         android:textColor="#4A4A4A"
@@ -28,10 +28,10 @@
         android:layout_height="wrap_content"
         android:text="Rabu,8 Januari 2025"
         android:fontFamily="@font/poppinsblackitalic"
+        app:layout_constraintBottom_toTopOf="@id/cardEstimation"
+        app:layout_constraintEnd_toEndOf="parent"
         android:textSize="17sp"
-        android:layout_marginStart="210dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvGreeting"/>
+        android:layout_marginStart="0dp"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardEstimation"
@@ -40,7 +40,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTanggal"
+        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:cardCornerRadius="8dp"
@@ -70,26 +70,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rp "
-                android:fontFamily="@font/poppinssemibold"
-                android:textSize="15sp"
-                android:textColor="#FF5722"
-                android:layout_marginStart="60dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="40.000,-"
+                android:text="Rp. 40.000,-"
                 android:fontFamily="@font/poppinssemibold"
                 android:textSize="18sp"
-                android:textColor="#FF5722" />
-
+                android:textColor="#FF5722"
+                android:layout_marginStart="60dp"/>
         </LinearLayout>
-
-            <View
-                android:layout_width="340dp"
-                android:layout_height="2dp"
-                android:background="#A6AEBF" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -186,6 +172,7 @@
         android:textSize="15sp"
         android:gravity="center"
         android:fontFamily="@font/poppinsmediumitalic"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="25dp"
         app:layout_constraintTop_toBottomOf="@id/tvMotivation"
         app:layout_constraintStart_toStartOf="parent"
