--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -28,21 +28,18 @@
         android:layout_height="wrap_content"
         android:text="Rabu,8 Januari 2025"
         android:fontFamily="@font/poppinsblackitalic"
-        app:layout_constraintBottom_toTopOf="@id/cardEstimation"
+        app:layout_constraintStart_toEndOf="@+id/tvGreeting"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="17sp"
-        android:layout_marginStart="0dp"/>
+        android:textSize="17sp"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardEstimation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="300dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@id/tvGreeting"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="20dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp">
 
@@ -64,87 +61,92 @@
                 android:layout_height="wrap_content"
                 android:text="Estimasi Hari Ini"
                 android:fontFamily="@font/poppinssemibold"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rp. 40.000,-"
+                android:text="Rp "
                 android:fontFamily="@font/poppinssemibold"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="#FF5722"
-                android:layout_marginStart="60dp"/>
+                android:layout_marginStart="80dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="40.000,-"
+                android:fontFamily="@font/poppinssemibold"
+                android:textSize="15sp"
+                android:textColor="#FF5722" />
         </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="30dp"
-                android:weightSum="3">
+            <View
+                android:layout_width="340dp"
+                android:layout_height="2dp"
+                android:background="#A6AEBF" />
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal"
                     android:gravity="center">
 
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/transaksi" />
+                        android:layout_marginEnd="75dp"
+                        android:src="@drawable/akun" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Transaksi"
+                        android:layout_marginEnd="20dp"
+                        android:text="Akun"
                         android:textSize="14sp"
                         android:fontFamily="@font/poppinssemibold"
                         android:layout_marginTop="4dp" />
                 </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:gravity="center">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="75dp"
+                    android:src="@drawable/pegawai" />
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:text="Pegawai"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/poppinssemibold"
+                    android:layout_marginTop="4dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:gravity="center">
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/pelanggan" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Pelanggan"
-                        android:fontFamily="@font/poppinsbold"
-                        android:textSize="14sp"
-                        android:layout_marginTop="4dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="75dp"
+                    android:src="@drawable/cabang" />
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="5dp"
-                        android:src="@drawable/laporan" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Laporan"
-                        android:fontFamily="@font/poppinsbold"
-                        android:textSize="14sp"
-                        android:layout_marginTop="4dp" />
-                </LinearLayout>
-
+                    android:text="Cabang"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/poppinssemibold"
+                    android:layout_marginTop="4dp" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
