--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rabu,8 Januari 2025"
+        android:textStyle="bold"
         android:fontFamily="@font/poppinsblackitalic"
         android:textSize="17sp"
         android:layout_marginStart="210dp"
@@ -114,7 +115,7 @@
                         android:layout_height="wrap_content"
                         android:text="Transaksi"
                         android:textSize="14sp"
-                        android:fontFamily="@font/poppinssemibold"
+                        android:fontFamily="@font/poppinsbold"
                         android:layout_marginTop="4dp" />
                 </LinearLayout>
 
@@ -186,7 +187,7 @@
         android:textSize="15sp"
         android:gravity="center"
         android:fontFamily="@font/poppinsmediumitalic"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="90dp"
         app:layout_constraintTop_toBottomOf="@id/tvMotivation"
         app:layout_constraintStart_toStartOf="parent"
          />
