--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvGreeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Selamat Pagi, Tiara N"
+        android:text="Selamat Pagi, Tiara Nilam"
         android:layout_marginTop="20dp"
         android:textSize="20sp"
         android:fontFamily="@font/poppinsbold"
