--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DDF2FD"
+    android:background="@drawable/landbg"
     tools:context=".MainActivity">
 
     <TextView
@@ -17,7 +17,6 @@
         android:textSize="20sp"
         android:fontFamily="@font/poppinsbold"
         android:textStyle="bold"
-        android:textColor="#4A4A4A"
         android:layout_marginStart="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -28,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="Rabu,8 Januari 2025"
         android:fontFamily="@font/poppinsblackitalic"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="150dp"
         app:layout_constraintBottom_toTopOf="@id/cardEstimation"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="17sp"/>
