--- a/app/src/main/res/layout/activity_data_pelanggan.xml
+++ b/app/src/main/res/layout/activity_data_pelanggan.xml
@@ -10,7 +10,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_data_pelanggan"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:listitem="@layout/activity_card_data_pelanggan">
     </androidx.recyclerview.widget.RecyclerView>
 
     <RelativeLayout
@@ -20,7 +21,7 @@
             android:id="@+id/bt_data_pengguna_tambah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="/baseline_add_24"
+            android:src="@drawable/pluss"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="16dp"
