translation bahasa tambah pelanggan

--- a/app/src/main/res/layout/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout/activity_tambah_pelanggan.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bglaundryyrill"
-    tools:context=".TambahPelanggan">
+    tools:context=".pelanggan.TambahPelanggan">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvJudul"
-        android:text="TAMBAH PELANGGAN"
+        android:text="@string/card_tambah_pelanggan"
         android:layout_marginTop="80dp"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvNama"
-        android:text="Nama"
+        android:text="@string/card_tambah_nama"
         app:layout_constraintTop_toBottomOf="@+id/tvJudul"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
@@ -37,7 +37,7 @@
         android:id="@+id/etNamaLengkap"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="Nama Lengkap"
+        android:hint="@string/card_tambah_namalengkap"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNama"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvAlamat"
-        android:text="Alamat"
+        android:text="@string/card_pelanggan_alamat"
         app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
@@ -62,20 +62,21 @@
         android:id="@+id/etAlamat"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="Alamat"
+        android:hint="@string/card_pelanggan_alamat"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
-        android:background="@drawable/edit_text_border"        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/edit_text_border"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvNoHp"
-        android:text="No HP Aktif"
+        android:text="@string/card_tambah_nohp_aktif"
         app:layout_constraintTop_toBottomOf="@+id/etAlamat"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
@@ -86,7 +87,7 @@
         android:id="@+id/etNoHp"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="No HP Aktif"
+        android:hint="@string/card_tambah_nohp_aktif"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
@@ -100,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvCabang"
-        android:text="Cabang"
+        android:text="@string/card_pegawai_cabang"
         app:layout_constraintTop_toBottomOf="@+id/etNoHp"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
@@ -111,7 +112,7 @@
         android:id="@+id/etCabang"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="Nama Cabang"
+        android:hint="@string/card_nama_cabang"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvCabang"
@@ -126,7 +127,7 @@
         android:id="@+id/buttonSimpan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="Simpan"
+        android:text="@string/card_simpan"
         android:backgroundTint="#133E87"
         android:padding="12dp"
         android:fontFamily="@font/poppinssemibold"
