--- a/app/src/main/res/layout-land/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout-land/activity_tambah_pelanggan.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/landbg"
-    tools:context=".TambahPelanggan">
+    tools:context=".pelanggan.TambahPelanggan">
 
     <TextView
         android:layout_width="wrap_content"
