membuat tambah pegawai & translation bahasa tambah pegawai

--- a/app/src/main/res/layout/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout/activity_tambah_pegawai.xml
@@ -4,20 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
+    android:background="@drawable/bglaundryyrill"
     android:layout_height="match_parent"
-    android:background="@drawable/landbg"
-    tools:context=".pelanggan.TambahPelanggan">
-
+    tools:context=".TambahPegawai">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvJudul"
-        android:text="@string/card_tambah_pelanggan"
-        android:layout_marginTop="20dp"
+        android:text="@string/card_tambah_pegawai"
+        android:layout_marginTop="80dp"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsbold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -28,8 +27,8 @@
         android:text="@string/card_tambah_nama"
         app:layout_constraintTop_toBottomOf="@+id/tvJudul"
         android:textSize="18sp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsmedium"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -40,9 +39,8 @@
         android:hint="@string/card_tambah_namalengkap"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
+        app:layout_constraintTop_toBottomOf="@+id/tvNama"
         android:padding="10dp"
-        android:layout_marginStart="150dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,11 +51,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvAlamat"
         android:text="@string/card_pelanggan_alamat"
-        app:layout_constraintTop_toBottomOf="@+id/tvNama"
+        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
         android:textSize="18sp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
+        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
         android:id="@+id/etAlamat"
@@ -66,9 +64,8 @@
         android:hint="@string/card_pelanggan_alamat"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
+        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
         android:padding="10dp"
-        android:layout_marginStart="150dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,11 +76,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvNoHp"
         android:text="@string/card_tambah_nohp_aktif"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
+        app:layout_constraintTop_toBottomOf="@+id/etAlamat"
         android:textSize="18sp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
+        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
         android:id="@+id/etNoHp"
@@ -92,9 +89,8 @@
         android:hint="@string/card_tambah_nohp_aktif"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etAlamat"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
         android:padding="10dp"
-        android:layout_marginStart="150dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,12 +100,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvCabang"
-        android:text="@string/card_nama_cabang"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
+        android:text="@string/card_pegawai_cabang"
+        app:layout_constraintTop_toBottomOf="@+id/etNoHp"
         android:textSize="18sp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
+        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
         android:id="@+id/etCabang"
@@ -118,9 +114,8 @@
         android:hint="@string/card_nama_cabang"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNoHp"
+        app:layout_constraintTop_toBottomOf="@+id/tvCabang"
         android:padding="10dp"
-        android:layout_marginStart="150dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,16 +124,14 @@
 
     <Button
         android:id="@+id/buttonSimpan"
-        android:layout_width="250dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:text="@string/card_simpan"
         android:backgroundTint="#133E87"
         android:padding="12dp"
-        android:layout_marginStart="150dp"
         android:fontFamily="@font/poppinssemibold"
-        android:textColor="@color/white"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@id/etNoHp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/etCabang"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
