--- a/app/src/main/res/layout/activity_data_pelanggan.xml
+++ b/app/src/main/res/layout/activity_data_pelanggan.xml
@@ -22,6 +22,7 @@
             android:id="@+id/bt_data_pengguna_tambah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#D4EBF8"
             android:src="@drawable/pluss"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
