--- a/app/src/main/res/layout/card_data_pegawai.xml
+++ b/app/src/main/res/layout/card_data_pegawai.xml
@@ -32,7 +32,7 @@
             android:id="@+id/tv_namapegawai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pegawai_id"
+            android:text="@string/card_pegawai_nama"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:layout_marginTop="40dp"
@@ -74,7 +74,7 @@
             android:id="@+id/tv_cabangpegawai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cabang"
+            android:text="@string/card_pegawai_cabang"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:textStyle="bold"
