--- a/app/src/main/res/layout-land/card_data_pegawai.xml
+++ b/app/src/main/res/layout-land/card_data_pegawai.xml
@@ -32,43 +32,43 @@
             android:id="@+id/tv_namapegawai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pegawai_id"
+            android:text="@string/card_pegawai_nama"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:layout_marginTop="40dp"
             android:textStyle="bold"
-            android:textSize="18dp"
+            android:textSize="18sp"
             />
 
         <TextView
             android:id="@+id/tv_alamat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_alamat"
+            android:text="@string/card_pegawai_alamat"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textSize="15sp"
             />
         <TextView
             android:id="@+id/tv_nohppegawai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_nohp"
+            android:text="@string/card_pegawai_nohp"
             android:paddingStart="10dp"
             android:textStyle="bold"
             android:fontFamily="@font/poppinsmedium"
-            android:textSize="15dp"
+            android:textSize="15sp"
             />
         <TextView
             android:id="@+id/tv_terdftarpegawai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_pelanggan_terdaftar"
+            android:text="@string/card_pegawai_terdaftar"
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textSize="15sp"
             />
         <TextView
             android:id="@+id/tv_cabangpegawai"
@@ -78,7 +78,7 @@
             android:paddingStart="10dp"
             android:fontFamily="@font/poppinsmedium"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textSize="15sp"
             />
 
         <GridLayout
@@ -97,7 +97,7 @@
                 android:id="@+id/bt_hubungipegawai"
                 android:layout_width="175dp"
                 android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_hubungi"
+                android:text="@string/card_pegawai_hubungi"
                 android:layout_marginEnd="5dp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/poppinssemibold"
@@ -108,7 +108,7 @@
                 android:id="@+id/bt_lihatpegawai"
                 android:layout_width="175dp"
                 android:layout_height="wrap_content"
-                android:text="@string/card_pelanggan_lihat"
+                android:text="@string/card_pegawai_lihat"
                 android:fontFamily="@font/poppinssemibold"
                 android:layout_marginEnd="5dp"
                 android:layout_marginStart="5dp"
