--- a/app/src/main/res/layout/activity_data_pegawai.xml
+++ b/app/src/main/res/layout/activity_data_pegawai.xml
@@ -9,7 +9,7 @@
     tools:context=".Data_Pegawai">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_data_pelanggan"
+            android:id="@+id/rv_data_pegawai"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/card_data_pegawai">
