--- a/app/src/main/res/layout/activity_tambah_layanan.xml
+++ b/app/src/main/res/layout/activity_tambah_layanan.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:background="@drawable/bglaundryyrill"
     android:layout_height="match_parent"
-    tools:context=".TambahPegawai">
+    android:background="@drawable/bglaundryyrill"
+    tools:context=".Tambah_Layanan">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJudul_pegawai"
-        android:text="@string/card_tambah_pegawai"
-        android:layout_marginTop="20dp"
+        android:id="@+id/tvJudul"
+        android:text="@string/card_tambah_layanan"
+        android:layout_marginTop="80dp"
         android:textSize="24sp"
         android:textStyle="bold"
         android:fontFamily="@font/poppinsbold"
@@ -23,9 +24,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNama_pegawai"
-        android:text="@string/card_tambah_pegawai_nama"
-        app:layout_constraintTop_toBottomOf="@+id/tvJudul_pegawai"
+        android:id="@+id/tv_nama_layanan"
+        android:text="@string/card_tambah_nama"
+        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
@@ -33,13 +34,13 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/etNamaLengkap_pegawai"
+        android:id="@+id/etNamaLengkap_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_pegawai_nama"
+        android:hint="@string/card_tambah_namalengkap"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNama_pegawai"
+        app:layout_constraintTop_toBottomOf="@+id/tv_nama_layanan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -49,22 +50,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvAlamat_pegawai"
-        android:text="@string/card_tambah_pegawai_alamat"
-        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap_pegawai"
+        android:id="@+id/tv_alamat_layanan"
+        android:text="@string/card_pelanggan_alamat"
+        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap_layanan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etAlamat_pegawai"
+        android:id="@+id/etAlamat_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_pegawai_alamat"
+        android:hint="@string/card_pelanggan_alamat"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlamat_pegawai"
+        app:layout_constraintTop_toBottomOf="@+id/tv_alamat_layanan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -74,74 +75,47 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNoHp_pegawai"
-        android:text="@string/card_tambah_pegawai_nohp_aktif"
-        app:layout_constraintTop_toBottomOf="@+id/etAlamat_pegawai"
+        android:id="@+id/tvNoHp_layanan"
+        android:text="@string/card_tambah_nohp_aktif"
+        app:layout_constraintTop_toBottomOf="@+id/etAlamat_layanan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etNoHp_pegawai"
+        android:id="@+id/etNoHp_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_pegawai_nohp_aktif"
+        android:hint="@string/card_tambah_nohp_aktif"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoHp_pegawai"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoHp_layanan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTerdaftar_pegawai"
-        android:text="@string/card_tambah_pegawai_terdaftar"
-        app:layout_constraintTop_toBottomOf="@+id/etNoHp_pegawai"
+        android:id="@+id/tvCabang_layanan"
+        android:text="@string/card_pegawai_cabang"
+        app:layout_constraintTop_toBottomOf="@+id/etNoHp_layanan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etTerdaftar_pegawai"
+        android:id="@+id/etCabang_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_pegawai_terdaftar"
+        android:hint="@string/card_nama_cabang"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTerdaftar_pegawai"
-        android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
-        android:background="@drawable/edit_text_border"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvCabang_pegawai"
-        android:text="@string/card_tambah_pegawai_cabang"
-        app:layout_constraintTop_toBottomOf="@+id/etTerdaftar_pegawai"
-        android:textSize="18sp"
-        android:layout_marginStart="30dp"
-        android:fontFamily="@font/poppinsmedium"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <EditText
-        android:id="@+id/etCabang_pegawai"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_pegawai_cabang"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCabang_pegawai"
+        app:layout_constraintTop_toBottomOf="@+id/tvCabang_layanan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -150,15 +124,15 @@
         />
 
     <Button
-        android:id="@+id/buttonSimpan_pegawai"
+        android:id="@+id/buttonSimpan_layanan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="@string/card_pegawai_simpan"
+        android:text="@string/card_simpan"
         android:backgroundTint="#133E87"
         android:padding="12dp"
         android:fontFamily="@font/poppinssemibold"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/etCabang_pegawai"
+        app:layout_constraintTop_toBottomOf="@id/etCabang_layanan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
