--- a/app/src/main/res/layout/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout/activity_tambah_pelanggan.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJudul"
+        android:id="@+id/tvJudul_pelanggan"
         android:text="@string/card_tambah_pelanggan"
         android:layout_marginTop="80dp"
         android:textSize="24sp"
@@ -24,9 +24,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNama"
-        android:text="@string/card_tambah_nama"
-        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
+        android:id="@+id/tvNama_pelanggan"
+        android:text="@string/card_tambah_pelanggan_nama"
+        app:layout_constraintTop_toBottomOf="@+id/tvJudul_pelanggan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
@@ -34,13 +34,13 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/etNamaLengkap"
+        android:id="@+id/etNamaLengkap_pelanggan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_namalengkap"
+        android:hint="@string/card_tambah_pelanggan_nama"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNama"
+        app:layout_constraintTop_toBottomOf="@+id/tvNama_pelanggan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -50,22 +50,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvAlamat"
-        android:text="@string/card_pelanggan_alamat"
-        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
+        android:id="@+id/tvAlamat_pelanggan"
+        android:text="@string/card_tambah_pelanggan_alamat"
+        app:layout_constraintTop_toBottomOf="@+id/etTerdaftar_pelanggan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etAlamat"
+        android:id="@+id/etAlamat_pelanggan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_pelanggan_alamat"
+        android:hint="@string/card_tambah_pelanggan_alamat"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
+        app:layout_constraintTop_toBottomOf="@+id/tvAlamat_pelanggan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -75,22 +75,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNoHp"
-        android:text="@string/card_tambah_nohp_aktif"
-        app:layout_constraintTop_toBottomOf="@+id/etAlamat"
+        android:id="@+id/tvNoHp_pelanggan"
+        android:text="@string/card_tambah_pelanggan_nohp_aktif"
+        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap_pelanggan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etNoHp"
+        android:id="@+id/etNoHp_pelanggan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_nohp_aktif"
+        android:hint="@string/card_tambah_pelanggan_nohp_aktif"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoHp_pelanggan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -100,22 +100,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvCabang"
-        android:text="@string/card_pegawai_cabang"
-        app:layout_constraintTop_toBottomOf="@+id/etNoHp"
+        android:id="@+id/tvTerdaftar_pelanggan"
+        android:text="@string/card_tambah_pelanggan_terdaftar"
+        app:layout_constraintTop_toBottomOf="@+id/etNoHp_pelanggan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"/>
     <EditText
-        android:id="@+id/etCabang"
+        android:id="@+id/etTerdaftar_pelanggan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:hint="@string/card_nama_cabang"
+        android:hint="@string/card_tambah_pelanggan_terdaftar"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCabang"
+        app:layout_constraintTop_toBottomOf="@+id/tvTerdaftar_pelanggan"
         android:padding="10dp"
         android:fontFamily="@font/poppinsmediumitalic"
         android:background="@drawable/edit_text_border"
@@ -124,15 +124,15 @@
         />
 
     <Button
-        android:id="@+id/buttonSimpan"
+        android:id="@+id/buttonSimpan_pelanggan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="@string/card_simpan"
+        android:text="@string/card_pelanggan_simpan"
         android:backgroundTint="#133E87"
         android:padding="12dp"
         android:fontFamily="@font/poppinssemibold"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/etCabang"
+        app:layout_constraintTop_toBottomOf="@id/etAlamat_pelanggan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
